Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Suchen",
-    "Traceability": "Rückverfolgbarkeit",
-    "VAT-register": "Steuerbuch",
     "abbreviated": "abgekürz",
     "about": "Über",
     "accept": "akzeptieren",
@@ -126,7 +123,7 @@
     "attribute-value-4": "Attributwert 4",
     "attribute-values": "Attributwerte",
     "attributes": "Attribute",
-    "august": "August",
+    "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Authentifizierung",
     "auto": "Auto",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Konnte die Tabelle in InnoDB konvertieren.",
     "error-updating-product-stock": "¡Fehler beim Aktualisieren des Artikelbestandes!",
     "errors": "Fehler",
+    "es_EC": "es_EC",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "es_EC",
     "estimation": "Haushalt",
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "Guten Tag, in der Anlage Ihr Kostenvoranschlag % Code%",
@@ -761,7 +758,7 @@
     "journal-closing": "journal-closing",
     "journal-opening": "journal-opening",
     "journals": "Journals",
-    "july": "Juli",
+    "july": "Julio",
     "june": "Junio",
     "justified": "justified",
     "keys": "Schlüssel",
@@ -872,7 +869,7 @@
     "max-risk": "max-risk",
     "maximum-stock": "Höchstbestand",
     "may": "Mayo",
-    "megasearch": "megasearch",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache klärte sich.",
     "memcache-delete-key-item": "Gelöschtes Element '0' von Memcache.",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Fehler im Gesamtbetrag der Mehrwertsteuerzeile der Steuer 0 der Rechnung. Richtiger Wert: 1",
     "totals": "Totales",
     "town": "Stadt, Dorf",
-    "traceability": "Rückverfolgbarkeit",
     "tracking-code": "tracking-code",
     "transfer": "transfer",
     "transfers": "transfers",
@@ -1465,6 +1461,7 @@
     "vat-document": "Steuerdokument",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "MwSt-Regelung",
+    "VAT-register": "Steuerbuch",
     "vat-regularization": "MwSt Regulierung",
     "verified": "geprüft",
     "version": "Version",
