--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Search",
-    "Traceability": "Traceability",
-    "VAT-register": "VAT registration",
     "abbreviated": "Abbreviated",
     "about": "About",
     "accept": "Accept",
@@ -112,7 +109,7 @@
     "approve-document": "Approve document",
     "approve-document-same-date": "Approve document on the same date",
     "approved": "Approved",
-    "april": "April",
+    "april": "Abril",
     "are-you-sure": "This cannot be undone. Are you sure you wish to continue?",
     "are-you-sure-action": "This action needs confirmation. Are you sure you want to continue?",
     "asset": "Asset",
@@ -126,7 +123,7 @@
     "attribute-value-4": "Attribute 4",
     "attribute-values": "Attribute values",
     "attributes": "Attributes",
-    "august": "August",
+    "august": "Agosto",
     "auth-token-invalid": "Invalid auth token",
     "authentication": "Authentication",
     "auto": "Auto",
@@ -374,7 +371,7 @@
     "db-user": "Database user",
     "debit": "Debit",
     "debug-mode": "Debug mode",
-    "december": "December",
+    "december": "Diciembre",
     "decimal-separator": "Decimal separator",
     "decimals": "Decimals",
     "default": "Default",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Error converting table to InnoDB.",
     "error-updating-product-stock": "¡Error updating product stock!",
     "errors": "Mistakes",
+    "es_EC": "Spanish (Ecuador)",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
     "es-tax-exception-e2": "Spain: exception by article 21 of the VAT Law",
     "es-tax-exception-e3": "Spain: exception by article 22 of the VAT Law",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Special regimes applicable to telecommunications, radio broadcasting or television services and those provided electronically",
     "es-tax-regime-travel": "Special scheme for travel agents",
     "es-tax-regime-used-goods": "Special regime for used goods, art objects, antiques and collectibles",
-    "es_EC": "Spanish (Ecuador)",
     "estimation": "Estimation",
     "estimation-email-subject": "Your estimation %code%",
     "estimation-email-text": "Hello, I am attaching your estimation %code%",
@@ -560,7 +557,7 @@
     "family": "Family",
     "family-code": "Family code",
     "fax": "Fax",
-    "february": "February",
+    "february": "Febrero",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
     "fields": "Fields",
     "file": "File",
@@ -755,14 +752,14 @@
     "items-removed-correctly": "%num% items removed correctly",
     "ivarep-subaccount-not-found": "Output VAT subaccount not found",
     "ivasop-account-not-found": "Input VAT subaccount not found",
-    "january": "January",
+    "january": "Enero",
     "job-name": "Job name",
     "journal": "Journal",
     "journal-closing": "Journal for closing",
     "journal-opening": "Journal for opening",
     "journals": "Journals",
-    "july": "July",
-    "june": "June",
+    "july": "Julio",
+    "june": "Junio",
     "justified": "Justified",
     "keys": "keys",
     "lang-code": "Language code",
@@ -863,7 +860,7 @@
     "manufacturer": "Manufacturer",
     "manufacturer-code": "Manufacturer code",
     "manufacturers": "Manufacturers",
-    "march": "March",
+    "march": "Marzo",
     "margin": "Margin",
     "margin-top": "Margin top",
     "mark-as-homepage": "Mark as homepage",
@@ -871,8 +868,8 @@
     "max-input-vars-warning": "With the current PHP configuration (max_input_vars) you will not be able to work with documents of more than %numlines% lines.",
     "max-risk": "Maximum risk",
     "maximum-stock": "Maximum stock",
-    "may": "May",
-    "megasearch": "MegaSearch",
+    "may": "Mayo",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache cleared.",
     "memcache-delete-key-item": "Deleted element '%item%' from Memcache.",
@@ -957,7 +954,7 @@
     "notice": "Notice",
     "notices": "Notices",
     "notifications": "Notifications",
-    "november": "November",
+    "november": "Noviembre",
     "number": "Number",
     "number-length": "Number length",
     "number-recipients": "Recipients no.",
@@ -965,7 +962,7 @@
     "numeric-formats": "Numeric formats",
     "numsupplier": "Num. supplier",
     "observations": "Observations",
-    "october": "October",
+    "october": "Octubre",
     "offsetting-account": "Offsetting account",
     "only-active": "Only active",
     "only-charged": "Only charged",
@@ -1229,7 +1226,7 @@
     "send-mail-error": "Error when sending the email",
     "send-mail-ok": "Email sent correctly",
     "sepa-suffix": "SEPA suffix",
-    "september": "September",
+    "september": "Septiembre",
     "sequences": "Sequences",
     "serial-number": "Serial Number",
     "serie": "Serie",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Error in the totallinea value of the VAT line of the tax %taxCode% of the invoice. Correct value: %totalLine%",
     "totals": "Totals",
     "town": "Town",
-    "traceability": "Traceability",
     "tracking-code": "Tracking code",
     "transfer": "Transfer",
     "transfers": "Transfers",
@@ -1465,6 +1461,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "VAT Exception",
     "vat-regime": "VAT Regime",
+    "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
     "verified": "Verified",
     "version": "Version",
