--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Buscador",
-    "Traceability": "Trazabilidad",
-    "VAT-register": "Impuestos",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
     "accept": "Aceptar",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Error al convertir la tabla a InnoDB.",
     "error-updating-product-stock": "¡Error al actualizar el stock del producto!",
     "errors": "Errores",
+    "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "Español (Ecuador)",
     "estimation": "Presupuesto",
     "estimation-email-subject": "Su presupuesto %code%",
     "estimation-email-text": "Buenos días, le adjunto su presupuesto %code%",
@@ -872,7 +869,7 @@
     "max-risk": "Riesgo máximo",
     "maximum-stock": "Stock máximo",
     "may": "Mayo",
-    "megasearch": "MegaBuscador",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache limpiada.",
     "memcache-delete-key-item": "Eliminado elemento '%item%' de Memcache.",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
     "totals": "Totales",
     "town": "Población",
-    "traceability": "Trazabilidad",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
     "transfers": "Tranferencias",
@@ -1465,6 +1461,7 @@
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "Régimen impuestos",
+    "VAT-register": "Impuestos",
     "vat-regularization": "Regularización de IVA",
     "verified": "Verificado",
     "version": "Versión",
