--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Bilatzailea",
-    "Traceability": "Trazabilitatea",
-    "VAT-register": "Zerga liburua",
     "abbreviated": "Laburtua",
     "about": "Honi buruz",
     "accept": "Onartu",
@@ -112,7 +109,7 @@
     "approve-document": "Dokumentua onartu",
     "approve-document-same-date": "Data berean onartu dokumentua",
     "approved": "Onartuta",
-    "april": "Apirila",
+    "april": "Abril",
     "are-you-sure": "Hau ezin da desegin. Ziur zaude jarraitu nahi duzula?",
     "are-you-sure-action": "Ekintza honek berrespena behar du. Ziur zaude jarraitu nahi duzula?",
     "asset": "Aktiboa",
@@ -126,7 +123,7 @@
     "attribute-value-4": "4. ezaugarria",
     "attribute-values": "Atributu balioak",
     "attributes": "Atributuak",
-    "august": "Abuztua",
+    "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Autentifikazioa",
     "auto": "Auto",
@@ -374,7 +371,7 @@
     "db-user": "Datu-base erabiltzailea",
     "debit": "Zorra",
     "debug-mode": "Zuzenketa modua",
-    "december": "Abendua",
+    "december": "Diciembre",
     "decimal-separator": "Hamartar banatzailea",
     "decimals": "Hamartarrak",
     "default": "Lehenetsia",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Errore bat gertatu da taula InnoDBra bihurtzean.",
     "error-updating-product-stock": "Errore bat gertatu da artikuluaren stocka eguneratzean!",
     "errors": "Erroreak",
+    "es_EC": "Gaztelania (Ekuatore)",
     "es-tax-exception-e1": "Espainia: BEZaren 20. legearen artikuluaren salbuespena",
     "es-tax-exception-e2": "Espainia: BEZaren Legearen 21. artikuluaren salbuespena",
     "es-tax-exception-e3": "Espainia: BEZaren Legearen 22. artikuluaren salbuespena",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Telekomunikazio, irrati-difusio edo telebista-zerbitzuei eta elektronikoki ematen direnei aplikatzekoak diren araubide bereziak",
     "es-tax-regime-travel": "Bidaia-agentzientzako araubide berezia",
     "es-tax-regime-used-goods": "Erabilitako ondasunen, arte-objektuen, antzinakoen eta bildumazaleen araubide berezia",
-    "es_EC": "Gaztelania (Ekuatore)",
     "estimation": "Aurrekontua",
     "estimation-email-subject": "Zure %code% aurrekontua",
     "estimation-email-text": "Kaixo, zure %code% aurrekontua atxikitzen dizut",
@@ -560,7 +557,7 @@
     "family": "Familia",
     "family-code": "Familia kodea",
     "fax": "Faxa",
-    "february": "Otsaila",
+    "february": "Febrero",
     "field-can-not-be-null": "%fieldName% eremua %tableName% taulan ezin da nulua izan",
     "fields": "Eremuak",
     "file": "Artxiboa",
@@ -755,14 +752,14 @@
     "items-removed-correctly": "%num% elementu behar bezala kenduta",
     "ivarep-subaccount-not-found": "Irteerako BEZaren azpikontua ez da aurkitu",
     "ivasop-account-not-found": "Sarrerako BEZaren azpikontua ez da aurkitu",
-    "january": "Urtarrila",
+    "january": "Enero",
     "job-name": "Lanaren izena",
     "journal": "Egunerokoa",
     "journal-closing": "Itxieraren egunkaria",
     "journal-opening": "Irikitzearen egunkaria",
     "journals": "Egunerokoak",
-    "july": "Uztaila",
-    "june": "Ekaina",
+    "july": "Julio",
+    "june": "Junio",
     "justified": "Justifikatuta",
     "keys": "Gakoak",
     "lang-code": "Hizkuntza kodea",
@@ -863,7 +860,7 @@
     "manufacturer": "Fabrikatzailea",
     "manufacturer-code": "Fabrikatzailearen kodea",
     "manufacturers": "Fabrikatzaileak",
-    "march": "Martxoa",
+    "march": "Marzo",
     "margin": "Marjina",
     "margin-top": "Goiko marjina",
     "mark-as-homepage": "Hasierako orria ezarri",
@@ -871,8 +868,8 @@
     "max-input-vars-warning": "Oraingo PHP konfigurazioarekin (max_input_vars) ezin izango duzu %numlines% lerro baino gehiago dituen dokumentuekin lan egin.",
     "max-risk": "Gehienezko arriskua",
     "maximum-stock": "Stock maximoa",
-    "may": "Maiatza",
-    "megasearch": "MegaBilatzailea",
+    "may": "Mayo",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
     "memcache-delete-key-item": "Memcache-tik '%item%' elementua ezabatu da.",
@@ -957,7 +954,7 @@
     "notice": "Oharra",
     "notices": "Oharrak",
     "notifications": "Jakinarazpenak",
-    "november": "Azaroa",
+    "november": "Noviembre",
     "number": "Zenbakia",
     "number-length": "Zenbakiaren luzera",
     "number-recipients": "Jasotzaile Zkia.",
@@ -965,7 +962,7 @@
     "numeric-formats": "Zenbaki formatuak",
     "numsupplier": "Hornitzaile zenbakia",
     "observations": "Oharrak",
-    "october": "Urria",
+    "october": "Octubre",
     "offsetting-account": "Kontrakontua",
     "only-active": "Aktiboak bakarrik",
     "only-charged": "Ordaindutakoak bakarrik",
@@ -1229,7 +1226,7 @@
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
     "sepa-suffix": "SEPA atzizkia",
-    "september": "Iraila",
+    "september": "Septiembre",
     "sequences": "Sekuentziak",
     "serial-number": "Serie zenbakia",
     "serie": "Seriea",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Fakturaren %taxCode% zergaren lerroko BEZ totala baliogabea. Balio zuzena: %totalLine%",
     "totals": "Totala",
     "town": "Herria",
-    "traceability": "Trazabilitatea",
     "tracking-code": "Jarraipen kodea",
     "transfer": "Transferentzia",
     "transfers": "Transferentziak",
@@ -1465,6 +1461,7 @@
     "vat-document": "Dokumentua",
     "vat-exception": "BEZaren salbuespena",
     "vat-regime": "BEZ erregimena",
+    "VAT-register": "Zerga liburua",
     "vat-regularization": "BEZ erregularizazioa",
     "verified": "Egiaztatua",
     "version": "Bertsioa",
