--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Recherche",
-    "Traceability": "Traçabilité",
-    "VAT-register": "Livre d'impôt",
     "abbreviated": "abrégé",
     "about": "Sur",
     "accept": "Accepter",
@@ -112,7 +109,7 @@
     "approve-document": "Approuver le document",
     "approve-document-same-date": "Approuver le document de la même date",
     "approved": "Approuvé",
-    "april": "Avril",
+    "april": "Abril",
     "are-you-sure": "Cette opération ne peut être annulée. Êtes-vous sûr de vouloir continuer ?",
     "are-you-sure-action": "Cette action nécessite une confirmation. Êtes-vous sûr de vouloir continuer?",
     "asset": "Actif",
@@ -126,7 +123,7 @@
     "attribute-value-4": "Valeur d'attribut 4",
     "attribute-values": "Valeur d'attribut",
     "attributes": "Les attributs",
-    "august": "Août",
+    "august": "Agosto",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Authentification",
     "auto": "Auto",
@@ -374,7 +371,7 @@
     "db-user": "Base de données de l'utilisateur",
     "debit": "Débit",
     "debug-mode": "Mode débogage",
-    "december": "Décembre",
+    "december": "Diciembre",
     "decimal-separator": "Séparateur décimal",
     "decimals": "Décimales",
     "default": "Par défaut",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Erreur lors de la conversion de la table pour InnoDB.",
     "error-updating-product-stock": "Erreur lors de la mise à jour du stock !",
     "errors": "erreurs",
+    "es_EC": "Espagnol (Équateur)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "Espagnol (Équateur)",
     "estimation": "devis",
     "estimation-email-subject": "Votre devis %code%",
     "estimation-email-text": "Bonjour, vous trouverez votre devis %code% en pièce jointe",
@@ -560,7 +557,7 @@
     "family": "Famille",
     "family-code": "Code familial",
     "fax": "Fax",
-    "february": "Février",
+    "february": "Febrero",
     "field-can-not-be-null": "Le champ %fieldName% du tableau %tableName% ne peut être nul",
     "fields": "Campos",
     "file": "Fichier",
@@ -755,14 +752,14 @@
     "items-removed-correctly": "%num% éléments supprimés correctement",
     "ivarep-subaccount-not-found": "Sous-compte de TVA sortante non trouvé",
     "ivasop-account-not-found": "sous-compte de TVA déductible non trouvé",
-    "january": "Janvier",
+    "january": "Enero",
     "job-name": "Nom du travail",
     "journal": "Journal",
     "journal-closing": "Journal pour la clôture",
     "journal-opening": "Journal pour l'ouverture",
     "journals": "Journaux",
-    "july": "Juillet",
-    "june": "Juin",
+    "july": "Julio",
+    "june": "Junio",
     "justified": "Justifié",
     "keys": "clés",
     "lang-code": "Code de langue",
@@ -863,7 +860,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Code du fabricant",
     "manufacturers": "Fabricants",
-    "march": "Mars",
+    "march": "Marzo",
     "margin": "Marge",
     "margin-top": "Haut de la marge",
     "mark-as-homepage": "Marquer comme page d'accueil",
@@ -871,8 +868,8 @@
     "max-input-vars-warning": "Avec la configuration PHP actuelle (max_input_vars), vous ne pourrez pas travailler avec des documents contenant plus de %numlines% lignes.",
     "max-risk": "Risque max.",
     "maximum-stock": "Stock maximum",
-    "may": "Mai",
-    "megasearch": "Rechercher",
+    "may": "Mayo",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache effacé.",
     "memcache-delete-key-item": "Élément supprimé '%item%' de Memcache.",
@@ -957,7 +954,7 @@
     "notice": "Avis",
     "notices": "Avis",
     "notifications": "Notificaciones",
-    "november": "Novembre",
+    "november": "Noviembre",
     "number": "Nombre",
     "number-length": "Longueur du nombre",
     "number-recipients": "Nº destinataires",
@@ -965,7 +962,7 @@
     "numeric-formats": "Formats numériques",
     "numsupplier": "Num. fournisseur",
     "observations": "Observations",
-    "october": "Octobre",
+    "october": "Octubre",
     "offsetting-account": "Compte de compensation",
     "only-active": "Actif seulement",
     "only-charged": "Facturé seulement",
@@ -1229,7 +1226,7 @@
     "send-mail-error": "Erreur lors de l'envoi de l'e-mail",
     "send-mail-ok": "L'e-mail a été envoyé avec succès",
     "sepa-suffix": "Suffixe SEPA",
-    "september": "Septembre",
+    "september": "Septiembre",
     "sequences": "Numérotations",
     "serial-number": "Numéro de série",
     "serie": "série",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Erreur dans la valeur totallinea de la ligne de TVA de la taxe %taxCode% de la facture. Valeur correcte: %totalLine%",
     "totals": "Totales",
     "town": "Ville",
-    "traceability": "Traçabilité",
     "tracking-code": "Code de suivi",
     "transfer": "Transfert",
     "transfers": "Transferts",
@@ -1465,6 +1461,7 @@
     "vat-document": "Document de TVA",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "Régime de TVA",
+    "VAT-register": "Livre d'impôt",
     "vat-regularization": "Régularisation de la TVA",
     "verified": "vérifié",
     "version": "Version",
