--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Buscador",
-    "Traceability": "Trazabilidade",
-    "VAT-register": "Libro de impostos",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
     "accept": "Aceptar",
@@ -374,7 +371,7 @@
     "db-user": "Usuario da base de datos",
     "debit": "Debe",
     "debug-mode": "Modo depuración",
-    "december": "Decembro",
+    "december": "Diciembre",
     "decimal-separator": "Separador de decimais",
     "decimals": "Decimais",
     "default": "Por defecto",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Error oa convertir a táboa a InnoDB.",
     "error-updating-product-stock": "Erro ao actualizar o stock do produto!",
     "errors": "Erros",
+    "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
     "es-tax-exception-e2": "España: excepción polo artigo 21 da Ley do IVE",
     "es-tax-exception-e3": "España: excepción polo artigo 22 da Ley do IVE",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "Español (Ecuador)",
     "estimation": "Orzamento",
     "estimation-email-subject": "O seu orzamento %code%",
     "estimation-email-text": "Ola, adxunto o seu orzamento %code%",
@@ -560,7 +557,7 @@
     "family": "Familia",
     "family-code": "Código familiar",
     "fax": "Fax",
-    "february": "Febreiro",
+    "february": "Febrero",
     "field-can-not-be-null": "O campo %fieldName% da táboa %tableName% non pode ser nulo",
     "fields": "Campos",
     "file": "Arquivo",
@@ -755,14 +752,14 @@
     "items-removed-correctly": "Elementos quitados corretamente",
     "ivarep-subaccount-not-found": "Subconta de IVE repercutido non atopada",
     "ivasop-account-not-found": "Subconta de IVE soportado non atopada",
-    "january": "Xaneiro",
+    "january": "Enero",
     "job-name": "Nome do traballo",
     "journal": "Diario",
     "journal-closing": "Diario de peche",
     "journal-opening": "Diario de apertura",
     "journals": "Diarios",
-    "july": "Xullo",
-    "june": "Xuño",
+    "july": "Julio",
+    "june": "Junio",
     "justified": "Xustificado",
     "keys": "Claves",
     "lang-code": "Código de idioma",
@@ -871,8 +868,8 @@
     "max-input-vars-warning": "Coa configuración actual de PHP (max_input_vars) non poderás traballar con documentos de máis de %numlines% líneas.",
     "max-risk": "Risco máximo",
     "maximum-stock": "Máximo stock",
-    "may": "Maio",
-    "megasearch": "MegaBuscador",
+    "may": "Mayo",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache %s",
     "memcache-clear": "Memcache eliminado.",
     "memcache-delete-key-item": "Eliminouse o elemento '%item%' de Memcache.",
@@ -957,7 +954,7 @@
     "notice": "Aviso",
     "notices": "Avisos",
     "notifications": "Notificaciones",
-    "november": "Novembro",
+    "november": "Noviembre",
     "number": "Número",
     "number-length": "Lonxitude do número",
     "number-recipients": "Nº perceptores",
@@ -965,7 +962,7 @@
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Num. provedor",
     "observations": "Observacións",
-    "october": "Outubro",
+    "october": "Octubre",
     "offsetting-account": "Contrapartida",
     "only-active": "soamente activos",
     "only-charged": "Só pagados",
@@ -1229,7 +1226,7 @@
     "send-mail-error": "Error ao enviar o email",
     "send-mail-ok": "Email enviado correctamente",
     "sepa-suffix": "sufixo SEPA",
-    "september": "Setembro",
+    "september": "Septiembre",
     "sequences": "Secuencias",
     "serial-number": "Número de serie",
     "serie": "Serie",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Erro no valor total da liña de IVE do imposto %taxCode% da factura. Valor correcto: %totalLínea%",
     "totals": "Totais",
     "town": "Cidade",
-    "traceability": "Trazabilidade",
     "tracking-code": "Código de seguimento",
     "transfer": "Transferencia",
     "transfers": "Transferencias",
@@ -1465,6 +1461,7 @@
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "Réxime do IVE",
+    "VAT-register": "Libro de impostos",
     "vat-regularization": "Regularización de Impostos",
     "verified": "verificado",
     "version": "Versión",
