--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "SuperSearch",
-    "Traceability": "Tracciabilità",
-    "VAT-register": "Partita IVA",
     "abbreviated": "abbreviazione",
     "about": "Di",
     "accept": "accettare",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Impossibile convertire la tabella di InnoDB.",
     "error-updating-product-stock": "¡Errore durante l'aggiornamento degli articoli!",
     "errors": "errori",
+    "es_EC": "Spagnolo (Equador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "Spagnolo (Equador)",
     "estimation": "bilancio",
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "estimation-email-text",
@@ -872,7 +869,7 @@
     "max-risk": "Rischio massimo",
     "maximum-stock": "Scorte massime",
     "may": "Mayo",
-    "megasearch": "megasearch",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache cancellato.",
     "memcache-delete-key-item": "Elemento cancellato '0' da Memcache.",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Errore nel valore totallinea della riga IVA dell'imposta 0 della fattura. Valore corretto: 1",
     "totals": "Totales",
     "town": "Cittadina",
-    "traceability": "tracciabilità",
     "tracking-code": "tracking-code",
     "transfer": "transfer",
     "transfers": "transfers",
@@ -1465,6 +1461,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "Regime IVA",
+    "VAT-register": "Partita IVA",
     "vat-regularization": "VAT Regularization",
     "verified": "verified",
     "version": "versione",
