--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Mega Pesquisa",
-    "Traceability": "Rastreabilidade",
-    "VAT-register": "VAT registration",
     "abbreviated": "Abreviado",
     "about": "Sobre",
     "accept": "Aceitar",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "¡Erro ao atualizar o estoque do item!",
     "errors": "Erros",
+    "es_EC": "es_EC",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "es_EC",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
     "estimation-email-text": "Olá, vai anexo o orçamento %code%",
@@ -872,7 +869,7 @@
     "max-risk": "max-risk",
     "maximum-stock": "Estoque máximo",
     "may": "Mayo",
-    "megasearch": "MegaPesquisador",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache foi limpo.",
     "memcache-delete-key-item": "Elemento excluído '0' do Memcache.",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
     "totals": "Totales",
     "town": "Cidade",
-    "traceability": "Rastreabilidade",
     "tracking-code": "Código de envio",
     "transfer": "transfer",
     "transfers": "transfers",
@@ -1465,6 +1461,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "Regime de IVA",
+    "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
     "verified": "verified",
     "version": "Versão",
