--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Buscador",
-    "Traceability": "Traçabilitat",
-    "VAT-register": "Llibre d'imposts",
     "abbreviated": "Abreujat",
     "about": "Sobre",
     "accept": "Acceptar",
@@ -126,7 +123,7 @@
     "attribute-value-4": "Atribut 4",
     "attribute-values": "Valors de l'atribut",
     "attributes": "Atributs",
-    "august": "Agost",
+    "august": "Agosto",
     "auth-token-invalid": "Calu API no vàlida",
     "authentication": "Autenticació",
     "auto": "Auto",
@@ -374,7 +371,7 @@
     "db-user": "Usuari de la base de senyes",
     "debit": "Deure",
     "debug-mode": "Modo de depuració",
-    "december": "Desembre",
+    "december": "Diciembre",
     "decimal-separator": "Separador de decimals",
     "decimals": "Decimals",
     "default": "Predeterminat",
@@ -511,6 +508,7 @@
     "error-to-innodb": "Erro al convertir la taula a InnoDB.",
     "error-updating-product-stock": "Error en actualitzar l'estoc del producte!",
     "errors": "Erros",
+    "es_EC": "Espanyol (Ecuador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "es_EC": "Espanyol (Ecuador)",
     "estimation": "Presupost",
     "estimation-email-subject": "estimation-email-subject",
     "estimation-email-text": "estimation-email-text",
@@ -872,7 +869,7 @@
     "max-risk": "Risc màxim",
     "maximum-stock": "Estoc màxim",
     "may": "Mayo",
-    "megasearch": "MegaBuscador",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "S'ha netejat la Memcache.",
     "memcache-delete-key-item": "L'element '%item%' s'ha eliminat de la Memcache.",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Erro en el valor totallinea de la llínea del IVA de l'impost %taxCode% de la factura. El valor correcte és: %totalLine%",
     "totals": "Totales",
     "town": "Ciutat",
-    "traceability": "Traçabilitat",
     "tracking-code": "tracking-code",
     "transfer": "Transferència",
     "transfers": "Transferències",
@@ -1465,6 +1461,7 @@
     "vat-document": "Document de l'IVA",
     "vat-exception": "Excepción de IVA",
     "vat-regime": "Règim de l'IVA",
+    "VAT-register": "Llibre d'imposts",
     "vat-regularization": "Regularització de l'IVA",
     "verified": "Verificat",
     "version": "Versió",
