--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1,7 +1,4 @@
 {
-    "MegaSearch": "Cerca",
-    "Traceability": "Traçabilitat",
-    "VAT-register": "Impostos",
     "abbreviated": "Abreujat",
     "about": "Sobre",
     "accept": "Acceptar",
@@ -126,7 +123,7 @@
     "attribute-value-4": "Atribut 4",
     "attribute-values": "Valors d'atribut",
     "attributes": "Atributs",
-    "august": "Agost",
+    "august": "Agosto",
     "auth-token-invalid": "Clau de API no vàlida",
     "authentication": "Autenticació",
     "auto": "Auto",
@@ -374,7 +371,7 @@
     "db-user": "Usuari de la base de dades",
     "debit": "Deure",
     "debug-mode": "Mode depuració",
-    "december": "Desembre",
+    "december": "Diciembre",
     "decimal-separator": "Decimal",
     "decimals": "Decimals",
     "default": "per Defecte",
@@ -511,6 +508,7 @@
     "error-to-innodb": "S'ha produït un error al convertir la taula a InnoDB.",
     "error-updating-product-stock": "Error en actualitzar l'estoc del producte!",
     "errors": "Errades",
+    "es_EC": "Espanyol (Ecuador)",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
     "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
     "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
@@ -529,7 +527,6 @@
     "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
     "es-tax-regime-travel": "Règim especial de les agències de viatges",
     "es-tax-regime-used-goods": "Règim especial dels béns usats, objectes d'art, antiguitats i objectes de col·lecció",
-    "es_EC": "Espanyol (Ecuador)",
     "estimation": "Pressupost",
     "estimation-email-subject": "El seu pressupost %code%",
     "estimation-email-text": "Hola, li adjuntem el seu pressupost %code%",
@@ -560,7 +557,7 @@
     "family": "Família",
     "family-code": "Codi de família",
     "fax": "Fax",
-    "february": "Febrer",
+    "february": "Febrero",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
     "fields": "Camps",
     "file": "Fitxer",
@@ -755,14 +752,14 @@
     "items-removed-correctly": "%num% elements eliminats correctament",
     "ivarep-subaccount-not-found": "Subcompte d'IVA repercutit no trobada",
     "ivasop-account-not-found": "Subcompte d'IVA suportat no trobada",
-    "january": "Gener",
+    "january": "Enero",
     "job-name": "Nom del treball",
     "journal": "Diari",
     "journal-closing": "Diari de tancament",
     "journal-opening": "Diari d'obertura",
     "journals": "Diaris",
-    "july": "Juliol",
-    "june": "Juny",
+    "july": "Julio",
+    "june": "Junio",
     "justified": "Justificat",
     "keys": "Claus",
     "lang-code": "Codi d'idioma",
@@ -863,7 +860,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
-    "march": "Març",
+    "march": "Marzo",
     "margin": "Marge",
     "margin-top": "Marge superior",
     "mark-as-homepage": "Marcar com a pàgina d'inici",
@@ -871,8 +868,8 @@
     "max-input-vars-warning": "Amb la configuració actual de PHP (max_input_vars) no podràs treballar amb documents de més de %numlines% línies.",
     "max-risk": "Risc màxim",
     "maximum-stock": "Stock màxim",
-    "may": "Maig",
-    "megasearch": "MegaCercador",
+    "may": "Mayo",
+    "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache netejada.",
     "memcache-delete-key-item": "Element eliminat '%item%' de Memcache.",
@@ -957,7 +954,7 @@
     "notice": "Avís",
     "notices": "Avisos",
     "notifications": "Notificacions",
-    "november": "Novembre",
+    "november": "Noviembre",
     "number": "Número",
     "number-length": "Longitud del nombre",
     "number-recipients": "Nº perceptors",
@@ -1229,7 +1226,7 @@
     "send-mail-error": "S'ha produït un error en enviar el correu electrònic",
     "send-mail-ok": "Correu enviat",
     "sepa-suffix": "Sufix SEPA",
-    "september": "Setembre",
+    "september": "Septiembre",
     "sequences": "Seqüències",
     "serial-number": "Nombre de Sèrie",
     "serie": "Sèrie",
@@ -1398,7 +1395,6 @@
     "totallinea-value-error": "Error en el valor de totallinea de la línia IVA de l'impost %taxCode% de la factura. Valor correcte: %totalLine%",
     "totals": "Totals",
     "town": "Població",
-    "traceability": "Traçabilitat",
     "tracking-code": "Codi de seguiment",
     "transfer": "Transferència",
     "transfers": "Transferències",
@@ -1465,6 +1461,7 @@
     "vat-document": "Document",
     "vat-exception": "Excepció d'IVA",
     "vat-regime": "Règim de l'IVA",
+    "VAT-register": "Impostos",
     "vat-regularization": "Regularització d'IVA",
     "verified": "Verificat",
     "version": "Versió",
