Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1151,6 +1151,7 @@
     "refresh": "Aktualisierung",
     "refresh-page": "Seite neu laden",
     "refund-amount": "Cantidad devuelta",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Rückerstattungen",
     "register": "Registrar",
     "register-installation": "Instalation registrieren",
