--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1151,6 +1151,7 @@
     "refresh": "Eguneratu",
     "refresh-page": "Orria eguneratu",
     "refund-amount": "Itzulketaren zenbatekoa",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Itzulketak",
     "register": "Erregistratu",
     "register-installation": "Instalazioa erregistratu",
