--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1151,6 +1151,7 @@
     "refresh": "Rafraîchir",
     "refresh-page": "Rafraîchir la page",
     "refund-amount": "Montant retourné",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Remboursements",
     "register": "S'enregistrer",
     "register-installation": "Enregistrer cette installation",
