--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1151,6 +1151,7 @@
     "refresh": "Actualizar",
     "refresh-page": "Actualiza a páxina",
     "refund-amount": "Cantidade devolta",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devolucións",
     "register": "Rexistrar",
     "register-installation": "Rexistrar instalación",
