--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1151,6 +1151,7 @@
     "refresh": "ricaricare",
     "refresh-page": "Aggiorna pagina",
     "refund-amount": "Cantidad devuelta",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "refunds",
     "register": "Registrar",
     "register-installation": "register-installation",
