--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1151,6 +1151,7 @@
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
     "refund-amount": "Cantidad devuelta",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-installation": "Registrar l'instalació",
