--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -123,7 +123,7 @@
     "attribute-value-4": "Atribut 4",
     "attribute-values": "Valors d'atribut",
     "attributes": "Atributs",
-    "august": "Agosto",
+    "august": "Agost",
     "auth-token-invalid": "Clau de API no vàlida",
     "authentication": "Autenticació",
     "auto": "Auto",
@@ -371,7 +371,7 @@
     "db-user": "Usuari de la base de dades",
     "debit": "Deure",
     "debug-mode": "Mode depuració",
-    "december": "Diciembre",
+    "december": "Desembre",
     "decimal-separator": "Decimal",
     "decimals": "Decimals",
     "default": "per Defecte",
@@ -557,7 +557,7 @@
     "family": "Família",
     "family-code": "Codi de família",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Febrer",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
     "fields": "Camps",
     "file": "Fitxer",
@@ -752,14 +752,14 @@
     "items-removed-correctly": "%num% elements eliminats correctament",
     "ivarep-subaccount-not-found": "Subcompte d'IVA repercutit no trobada",
     "ivasop-account-not-found": "Subcompte d'IVA suportat no trobada",
-    "january": "Enero",
+    "january": "Gener",
     "job-name": "Nom del treball",
     "journal": "Diari",
     "journal-closing": "Diari de tancament",
     "journal-opening": "Diari d'obertura",
     "journals": "Diaris",
-    "july": "Julio",
-    "june": "Junio",
+    "july": "Juliol",
+    "june": "Juny",
     "justified": "Justificat",
     "keys": "Claus",
     "lang-code": "Codi d'idioma",
@@ -860,7 +860,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
-    "march": "Marzo",
+    "march": "Març",
     "margin": "Marge",
     "margin-top": "Marge superior",
     "mark-as-homepage": "Marcar com a pàgina d'inici",
@@ -868,8 +868,8 @@
     "max-input-vars-warning": "Amb la configuració actual de PHP (max_input_vars) no podràs treballar amb documents de més de %numlines% línies.",
     "max-risk": "Risc màxim",
     "maximum-stock": "Stock màxim",
-    "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "may": "Maig",
+    "mega-search": "MegaCercador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache netejada.",
     "memcache-delete-key-item": "Element eliminat '%item%' de Memcache.",
@@ -954,7 +954,7 @@
     "notice": "Avís",
     "notices": "Avisos",
     "notifications": "Notificacions",
-    "november": "Noviembre",
+    "november": "Novembre",
     "number": "Número",
     "number-length": "Longitud del nombre",
     "number-recipients": "Nº perceptors",
@@ -1151,6 +1151,7 @@
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
     "refund-amount": "Quantitat retornada",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-installation": "Registrar instal·lació",
@@ -1226,7 +1227,7 @@
     "send-mail-error": "S'ha produït un error en enviar el correu electrònic",
     "send-mail-ok": "Correu enviat",
     "sepa-suffix": "Sufix SEPA",
-    "september": "Septiembre",
+    "september": "Setembre",
     "sequences": "Seqüències",
     "serial-number": "Nombre de Sèrie",
     "serie": "Sèrie",
