--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -1151,6 +1151,7 @@
     "refresh": "Recargar",
     "refresh-page": "Recargar página",
     "refund-amount": "Cantidad devuelta",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devoluciones",
     "register": "Registrar",
     "register-installation": "Registrar instalación",
