--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1151,6 +1151,7 @@
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
     "refund-amount": "Cantidad devuelta",
+    "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "refunds",
     "register": "Registrar",
     "register-installation": "register-installation",
