Añadida la cuenta especial de anticipos de clientes.

--- a/Core/Data/Lang/ES/cuentasesp.csv
+++ b/Core/Data/Lang/ES/cuentasesp.csv
@@ -1,5 +1,6 @@
 codcuentaesp;descripcion
 "ACREED";"Cuentas de acreedores"
+"ANTCLI";"Anticipos de clientes"
 "CAJA";"Cuentas de caja"
 "CAMNEG";"Cuentas de diferencias negativas de cambio"
 "CAMPOS";"Cuentas de diferencias positivas de cambio"
