--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1151,7 +1151,7 @@
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
     "refund-amount": "Quantitat retornada",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-installation": "Registrar instal·lació",
